JumpScript/tests/baselines/reference/asyncConstructor_es5.errors.txt
tests/cases/conformance/async/es5/asyncConstructor_es5.jump(2,3): error TS1089: 'async' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/async/es5/asyncConstructor_es5.jump (1 errors) ====
    class C {
      async constructor() {
      ~~~~~
!!! error TS1089: 'async' modifier cannot appear on a constructor declaration.
      }
    }